5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1834_1277.log
== TEST (2019-06-27 15:17:33) 
-- CODE:
from numpy import*

tabela = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,45],[11,7,0,11,8,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1 % cid2) - 1
b = ( cid2 % cid1) - 1

x = (tabela[a/b])
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 15:20:18) 
-- CODE:
from numpy import*

tabela = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,45],[11,7,0,11,8,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1 % cid2) - 1
b = ( cid2 % cid1) - 1

print(tabela[a,b])
-- EXECUTION TIME:
1.12341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1277/main.py", line 11, in <module>
    print(tabela[a,b])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:20:19) 
-- CODE:
from numpy import*

tabela = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,45],[11,7,0,11,8,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1 % cid2) - 1
b = ( cid2 % cid1) - 1

print(tabela[a,b])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:20:58) 
-- CODE:
from numpy import*

tabela = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,45],[11,7,0,11,8,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1 % 10) - 1
b = ( cid2 % 10) - 1

print(tabela[a,b])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:21:42) 
-- CODE:
from numpy import*

tabela = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,45],[11,7,0,11,8,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1%10) - 1
b = ( cid2%10) - 1

print(tabela[a,b])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:25:24) 
-- CODE:
from numpy import*

tabela = array
([[0,2,11,6,15,11,1], 
[2,0,7,12,4,2,45],
[11,7,0,11,3,13],
6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1%10) - 1
b = (cid2%10) - 1

print(tabela[a,b])
-- ERROR:
File "XXXX", line 10
    [1,15,13,1,13,14,0]])
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:25:28) 
-- CODE:
from numpy import*

tabela = array
([[0,2,11,6,15,11,1], 
[2,0,7,12,4,2,45],
[11,7,0,11,3,13],
6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1%10) - 1
b = (cid2%10) - 1

print(tabela[a,b])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:26:38) 
-- CODE:
from numpy import*

tabela = array
([[0,2,11,6,15,11,1], 
[2,0,7,12,4,2,45],
[11,7,0,11,3,13],
6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1%10) - 1
b = (cid2%10) - 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:28:03) 
-- CODE:
from numpy import*

tabela = array
([[0,2,11,6,15,11,1], 
[2,0,7,12,4,2,45],
[11,7,0,11,3,13],
6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1%10) - 1
b = (cid2%10) - 1

print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:28:13) 
-- CODE:
from numpy import*

tabela = array
([[0,2,11,6,15,11,1], 
[2,0,7,12,4,2,45],
[11,7,0,11,3,13],
6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1%10) - 1
b = (cid2%10) - 1

print(tabela[a,b])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:29:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabela = array
([[0,2,11,6,15,11,1], 
[2,0,7,12,4,2,45],
[11,7,0,11,3,13],
6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1%10) - 1
b = (cid2%10) - 1

print(tabela[a,b])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:29:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabela = array
([[0,2,11,6,15,11,1], 
[2,0,7,12,4,2,45],
[11,7,0,11,3,13],
6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1%10) - 1
b = (cid2%10) - 1
x = (tabela[a,b])
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:30:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabela = array
([0,2,11,6,15,11,1], 
[2,0,7,12,4,2,45],
[11,7,0,11,3,13],
6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1%10) - 1
b = (cid2%10) - 1
x = (tabela[a,b])
print(x)
-- ERROR:
File "XXXX", line 7
    6,12,11,0,10,2,1],
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:30:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabela = array
([[0,2,11,6,15,11,1], 
[2,0,7,12,4,2,45],
[11,7,0,11,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1%10) - 1
b = (cid2%10) - 1
x = (tabela[a,b])
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 15:32:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabela = array
([[0,2,11,6,15,11,1], 
	[2,0,7,12,4,2,15],
	[11,7,11,0,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1%10) - 1
b = (cid2%10) - 1
x = (tabela[a,b])
print(x)
-- EXECUTION TIME:
1.00541
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1277/main.py", line 17, in <module>
    x = (tabela[a,b])
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:33:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabela = array
([[0,2,11,6,15,11,1], 
	[2,0,7,12,4,2,15],
	[11,7,11,0,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1%10) - 1
b = (cid2%10) - 1
x = (tabela[a,b])
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:34:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabela = array
([[0,2,11,6,15,11,1], 
	[2,0,7,12,4,2,15],
	[11,7,11,0,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1//100) - 1
b = (cid2//100) - 1
x = (tabela[a,b])
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:34:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabela = array
([[0,2,11,6,15,11,1], 
	[2,0,7,12,4,2,15],
	[11,7,11,0,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1//100) - 1
b = (cid2//100) - 1
x = tabela[a,b]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:35:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabela = array
([[0,2,11,6,15,11,1], 
	[2,0,7,12,4,2,15],
	[11,7,11,0,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1/100) - 1
b = (cid2/100) - 1
x = tabela[a,b]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:37:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabela = array
([[0,2,11,6,15,11,1], 
	[2,0,7,12,4,2,15],
	[11,7,11,0,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1/111) - 1
b = (cid2/111) - 1
x = tabela[a,b]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:38:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabela = array
([[0,2,11,6,15,11,1], 
	[2,0,7,12,4,2,15],
	[11,7,11,0,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1/111)- 1
b = (cid2/111)- 1
x = tabela[a,b]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:39:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabela = array([
	[0,2,11,6,15,11,1], 
	[2,0,7,12,4,2,15],
	[11,7,11,0,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]
])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1/111)- 1
b = (cid2/111)- 1
x = tabela[a,b]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:40:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabela = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,11,0,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = (cid1/111)- 1
b = (cid2/111)- 1
x = tabela[a,b]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:40:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabela = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,11,0,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

cid1 = int(input("numero da cidade 1:"))
cid2 = int(input("numero da cidade 2:"))

a = cid1/111 - 1
b = cid2/111 - 1
x = tabela[a,b]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 15:42:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

distance_city=array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA=int(input("city A: "))
cityB=int(input("city B: "))
cityA=(cityA%10)-1
cityB=(cityB%10)-1

print(distance_city[cityA,cityB])
-- EXECUTION TIME:
1.17757
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
